[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pepmatch"
dynamic = ["version"]
description = "Search tool for peptides and epitopes within a proteome, while considering potential residue substitutions."
readme = "README.md"
authors = [
  { name = "Daniel Marrama", email = "dmarrama@lji.org" },
]
license = { file = "LICENSE" }
dependencies = [
  "polars>=1.31.0",
  "biopython>=1.78",
  "xlsxwriter>=3.2.5",
  "tqdm>=4.67.0"
]

[project.urls]
Homepage = "https://github.com/IEDB/PEPMatch"

[project.scripts]
pepmatch-preprocess = "pepmatch.shell:run_preprocessor"
pepmatch-match = "pepmatch.shell:run_matcher"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pre-commit>=3.3.2",
]

[tool.maturin]
manifest-path = "pepmatch/rs-engine/Cargo.toml"
module-name = "pepmatch._rs"
python-source = "."

[tool.setuptools.dynamic]
version = { attr = "pepmatch.version.__version__" }

[tool.ruff]
line-length = 150
