[metadata]
name = pepmatch
version = attr: pepmatch.version.__version__
description = Search tool for peptides and epitopes within a proteome, while considering potential residue substitutions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IEDB/PEPMatch
author = Daniel Marrama
author_email = dmarrama@lji.org

[options]
packages = find:
install_requires =
    numpy>=1.18
    pandas>=1.1
    biopython>=1.5
    python-Levenshtein>=0.11
    openpyxl>=3.0.0
zip_safe = False

[options.entry_points]
console_scripts =
    pepmatch-preprocess = pepmatch.shell:run_preprocessor
    pepmatch-match = pepmatch.shell:run_matcher
