[metadata]
name = pepmatch
version = attr: pepmatch.version.__version__
description = Search tool for peptides and epitopes within a proteome, while considering potential residue substitutions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IEDB/PEPMatch
author = Daniel Marrama
author_email = dmarrama@lji.org

[options]
packages = find:
install_requires =
    polars>=1.31.0
    biopython>=1.78
    xlsxwriter>=3.2.5
    tqdm>=4.67.0

zip_safe = False

[options.entry_points]
console_scripts =
    pepmatch-preprocess = pepmatch.shell:run_preprocessor
    pepmatch-match = pepmatch.shell:run_matcher
